--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
     "postinstall": "bower install"
   },
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "body-parser": "~1.17.1",
     "bower": "latest",
     "cms-javascript-sdk": "github:amplience/cms-javascript-sdk",
@@ -20,11 +22,15 @@
     "lodash": "^4.17.4",
     "marko": "^4.4.28",
     "moment": "^2.19.1",
-    "morgan": "~1.8.1",
+    "morgan": "^1.8.2",
     "q": "^1.5.0",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.2",
     "uuid": "^3.1.0",
+    "winston": "^2.4.1",
     "x-ray": "2.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
